src/m1_parse.output
Terminals which are not used

   M1BLOCK_COMMENT
   M1LINE_COMMENT
   POST_INC_OP
   POST_DEC_OP
   PRE_INC_OP
   PRE_DEC_OP
   RANGE
   STEP


State 369 conflicts: 1 shift/reduce


Grammar

    0 $accept: file $end

    1 identifier: M1IDENTIFIER

    2 integer: M1INTEGER

    3 version: /* empty */
    4        | '(' integer ')'
    5        | '(' integer ',' integer ')'
    6        | '(' integer ',' integer ',' integer ')'

    7 based_identifier: identifier
    8                 | '@' M1IDENTIFIER
    9                 | '@' type_context '.' M1IDENTIFIER

   10 context_identifier: '.' M1TIDENTIFIER

   11 primary_expr: based_identifier
   12             | context_identifier
   13             | M1CHAR
   14             | M1INTEGER
   15             | M1FLOAT
   16             | M1TRUE
   17             | M1FALSE
   18             | M1STRING
   19             | M1NIL
   20             | M1THIS
   21             | '@' object_constructor
   22             | '@' array_constructor
   23             | '@' type_context '(' expr ')'
   24             | '@' primitive_type '(' expr ')'
   25             | '&' M1IDENTIFIER
   26             | '&' type_context '.' M1IDENTIFIER
   27             | '(' expr ')'

   28 postfix_expr: primary_expr
   29             | postfix_expr '[' expr ']'
   30             | postfix_expr '[' expr ':' expr ']'
   31             | postfix_expr '[' expr ':' expr ':' expr ']'
   32             | postfix_expr '(' ')'
   33             | postfix_expr '(' argument_expr_list ')'
   34             | postfix_expr '.' identifier
   35             | postfix_expr INC_OP
   36             | postfix_expr DEC_OP

   37 argument_expr_list: assignment_expr
   38                   | argument_expr_list ',' assignment_expr

   39 unary_expr: postfix_expr
   40           | unary_operator unary_expr

   41 unary_operator: '+'
   42               | '-'
   43               | '~'
   44               | '!'
   45               | '*'
   46               | SUPRESS_OP
   47               | INC_OP
   48               | DEC_OP

   49 multiplicative_expr: unary_expr
   50                    | multiplicative_expr '*' unary_expr
   51                    | multiplicative_expr '/' unary_expr
   52                    | multiplicative_expr '%' unary_expr

   53 additive_expr: multiplicative_expr
   54              | additive_expr '+' multiplicative_expr
   55              | additive_expr '-' multiplicative_expr

   56 shift_expr: additive_expr
   57           | shift_expr SHIFTL_OP additive_expr
   58           | shift_expr SHIFTR_OP additive_expr

   59 relational_expr: shift_expr
   60                | relational_expr '<' shift_expr
   61                | relational_expr '>' shift_expr
   62                | relational_expr LE_OP shift_expr
   63                | relational_expr GE_OP shift_expr

   64 equality_expr: relational_expr
   65              | equality_expr EQ_OP relational_expr
   66              | equality_expr NE_OP relational_expr
   67              | equality_expr EQL_OP relational_expr
   68              | equality_expr NQL_OP relational_expr

   69 and_expr: equality_expr
   70         | and_expr '&' equality_expr

   71 exclusive_or_expr: and_expr
   72                  | exclusive_or_expr '^' and_expr

   73 inclusive_or_expr: exclusive_or_expr
   74                  | inclusive_or_expr '|' exclusive_or_expr

   75 logical_and_expr: inclusive_or_expr
   76                 | logical_and_expr AND_OP inclusive_or_expr

   77 logical_or_expr: logical_and_expr
   78                | logical_or_expr OR_OP logical_and_expr

   79 conditional_expr: logical_or_expr
   80                 | logical_or_expr '?' logical_or_expr ':' conditional_expr

   81 type_context_name: M1TIDENTIFIER
   82                  | ':' M1TIDENTIFIER
   83                  | type_context_name ':' M1TIDENTIFIER

   84 type_context: type_context_name

   85 object_constructor: type_context '{' '}'
   86                   | type_context '{' finitializer_list '}'

   87 array_constructor: '{' '}'
   88                  | '{' initializer_list '}'

   89 constructor: object_constructor
   90            | array_constructor

   91 object_expr: conditional_expr
   92            | constructor

   93 assignment_expr: conditional_expr
   94                | unary_expr assignment_operator assignment_expr
   95                | unary_expr assignment_operator constructor

   96 assignment_operator: '='
   97                    | COPY_ASSIGN
   98                    | MUL_ASSIGN
   99                    | DIV_ASSIGN
  100                    | REM_ASSIGN
  101                    | ADD_ASSIGN
  102                    | SUB_ASSIGN
  103                    | SHIFTL_ASSIGN
  104                    | SHIFTR_ASSIGN
  105                    | AND_ASSIGN
  106                    | XOR_ASSIGN
  107                    | OR_ASSIGN
  108                    | CONNECT_OP

  109 expr: assignment_expr
  110     | expr ',' assignment_expr

  111 constant_expr: conditional_expr

  112 visibility: /* empty */
  113           | PUBLIC
  114           | PRIVATE
  115           | PROTECTED

  116 storage: CONST
  117        | PERSISTENT

  118 storage_list: /* empty */
  119             | storage_list storage

  120 typeid: M1TIDENTIFIER

  121 parentid: /* empty */
  122         | ':' type_context

  123 primitive_type: SIGNED CHAR
  124               | CHAR
  125               | UNSIGNED CHAR
  126               | BYTE
  127               | INT
  128               | SIGNED
  129               | SIGNED INT
  130               | UNSIGNED INT
  131               | UNSIGNED
  132               | FLOAT
  133               | BOOL
  134               | STRING
  135               | TIME

  136 event_type: primitive_type
  137           | INPUT EVENT primitive_type
  138           | OUTPUT EVENT primitive_type
  139           | EVENT primitive_type
  140           | INPUT EVENT QUEUE primitive_type
  141           | EVENT QUEUE primitive_type

  142 enum_specifier: ENUM typeid '{' enumerator_list '}'
  143               | ENUM '{' enumerator_list '}'

  144 enumerator_list: enumerator
  145                | enumerator_list ',' enumerator

  146 enumerator: identifier
  147           | identifier '=' constant_expr

  148 type_specifier: event_type
  149               | type_context
  150               | INPUT EVENT type_context_name
  151               | OUTPUT EVENT type_context_name
  152               | EVENT type_context_name
  153               | INPUT EVENT QUEUE type_context_name
  154               | EVENT QUEUE type_context_name

  155 decl_specifier: TYPE typeid parentid '{' declaration_list script_list statement_list '}'
  156               | TYPE typeid parentid '{' declaration_list script_list '}'
  157               | TYPEDEF type_declarator typeid
  158               | INTERFACE TYPE typeid parentid '{' declaration_list '}'
  159               | INTERFACE LIBRARY typeid version '{' declaration_list '}'
  160               | INTERFACE APPLICATION typeid version '{' declaration_list '}'

  161 declaration: visibility storage_list type_specifier declarator
  162            | visibility storage_list type_specifier declarator '=' object_expr
  163            | visibility storage_list type_specifier declarator CONNECT_OP object_expr
  164            | visibility storage_list enum_specifier
  165            | visibility storage_list enum_specifier declarator
  166            | visibility storage_list enum_specifier declarator '=' object_expr
  167            | visibility decl_specifier

  168 declaration_list: /* empty */
  169                 | declaration_list declaration ';'

  170 type_declarator: type_specifier
  171                | '(' type_declarator ')'
  172                | type_declarator '[' ']'
  173                | type_declarator '[' constant_expr ']'

  174 declarator: M1IDENTIFIER
  175           | '@' type_context '.' M1IDENTIFIER
  176           | '(' declarator ')'
  177           | declarator '[' ']'
  178           | declarator '[' constant_expr ']'

  179 initializer_list: object_expr
  180                 | initializer_list ',' object_expr

  181 fid: based_identifier
  182    | fid '[' expr ']'

  183 finitializer: fid '=' object_expr
  184             | fid CONNECT_OP conditional_expr

  185 finitializer_list: finitializer
  186                  | finitializer_list ',' finitializer

  187 range_expr: '[' expr ']'
  188           | '[' expr ':' expr ']'
  189           | '[' expr ':' expr ':' expr ']'

  190 statement: labeled_statement
  191          | compound_statement
  192          | expression_statement
  193          | selection_statement
  194          | iteration_statement
  195          | jump_statement

  196 labeled_statement: CASE constant_expr ':' statement
  197                  | DEFAULT ':' statement

  198 compound_statement: '{' '}'
  199                   | '{' declaration_list statement_list '}'

  200 statement_list: statement
  201               | statement_list statement

  202 expression_statement: ';'
  203                     | expr ';'

  204 selection_statement: IF '(' expr ')' statement
  205                    | IF '(' expr ')' statement ELSE statement
  206                    | SWITCH '(' expr ')' '{' '}'
  207                    | SWITCH '(' expr ')' '{' declaration_list statement_list '}'

  208 iteration_statement: FOREACH identifier IN assignment_expr compound_statement
  209                    | FOREACH identifier IN range_expr compound_statement

  210 jump_statement: CONTINUE ';'
  211               | BREAK ';'
  212               | RETURN ';'
  213               | RETURN expr ';'

  214 script_list: /* empty */
  215            | script_list script

  216 script: '+' SCRIPT expr script_body
  217       | '+' SCRIPT script_body
  218       | '-' SCRIPT expr script_body
  219       | '-' SCRIPT script_body
  220       | SCRIPT expr script_body
  221       | SCRIPT script_body
  222       | SCRIPT typeid compound_statement
  223       | SCRIPT '~' typeid compound_statement

  224 script_body: WHEN expr compound_statement
  225            | compound_statement

  226 library: LIBRARY typeid version '{' declaration_list script_list '}'
  227        | LIBRARY typeid version '{' declaration_list script_list statement_list '}'

  228 application: APPLICATION typeid version '{' declaration_list script_list '}'
  229            | APPLICATION typeid version '{' declaration_list script_list statement_list '}'

  230 toplevel: declaration_list script_list
  231         | declaration_list script_list statement_list

  232 file: library
  233     | application
  234     | toplevel


Terminals, with rules where they appear

$end (0) 0
'!' (33) 44
'%' (37) 52
'&' (38) 25 26 70
'(' (40) 4 5 6 23 24 27 32 33 171 176 204 205 206 207
')' (41) 4 5 6 23 24 27 32 33 171 176 204 205 206 207
'*' (42) 45 50
'+' (43) 41 54 216 217
',' (44) 5 6 38 110 145 180 186
'-' (45) 42 55 218 219
'.' (46) 9 10 26 34 175
'/' (47) 51
':' (58) 30 31 80 82 83 122 188 189 196 197
';' (59) 169 202 203 210 211 212 213
'<' (60) 60
'=' (61) 96 147 162 166 183
'>' (62) 61
'?' (63) 80
'@' (64) 8 9 21 22 23 24 175
'[' (91) 29 30 31 172 173 177 178 182 187 188 189
']' (93) 29 30 31 172 173 177 178 182 187 188 189
'^' (94) 72
'{' (123) 85 86 87 88 142 143 155 156 158 159 160 198 199 206 207 226
    227 228 229
'|' (124) 74
'}' (125) 85 86 87 88 142 143 155 156 158 159 160 198 199 206 207 226
    227 228 229
'~' (126) 43 223
error (256)
M1BLOCK_COMMENT (258)
M1LINE_COMMENT (259)
M1IDENTIFIER (260) 1 8 9 25 26 174 175
M1CHAR (261) 13
M1INTEGER (262) 2 14
M1FLOAT (263) 15
M1STRING (264) 18
SHIFTL_OP (265) 57
SHIFTR_OP (266) 58
LE_OP (267) 62
GE_OP (268) 63
EQ_OP (269) 65
NE_OP (270) 66
EQL_OP (271) 67
NQL_OP (272) 68
INC_OP (273) 35 47
DEC_OP (274) 36 48
POST_INC_OP (275)
POST_DEC_OP (276)
PRE_INC_OP (277)
PRE_DEC_OP (278)
AND_OP (279) 76
OR_OP (280) 78
COPY_ASSIGN (281) 97
MUL_ASSIGN (282) 98
DIV_ASSIGN (283) 99
REM_ASSIGN (284) 100
ADD_ASSIGN (285) 101
SUB_ASSIGN (286) 102
SHIFTL_ASSIGN (287) 103
SHIFTR_ASSIGN (288) 104
AND_ASSIGN (289) 105
XOR_ASSIGN (290) 106
OR_ASSIGN (291) 107
M1TIDENTIFIER (292) 10 81 82 83 120
CONNECT_OP (293) 108 163 184
M1NIL (294) 19
M1THIS (295) 20
M1TRUE (296) 16
M1FALSE (297) 17
TYPE (298) 155 156 158
LIBRARY (299) 159 226 227
APPLICATION (300) 160 228 229
INTERFACE (301) 158 159 160
EVENT (302) 137 138 139 140 141 150 151 152 153 154
INPUT (303) 137 140 150 153
OUTPUT (304) 138 151
QUEUE (305) 140 141 153 154
PUBLIC (306) 113
PRIVATE (307) 114
PERSISTENT (308) 117
PROTECTED (309) 115
CHAR (310) 123 124 125
BYTE (311) 126
INT (312) 127 129 130
SIGNED (313) 123 128 129
UNSIGNED (314) 125 130 131
FLOAT (315) 132
BOOL (316) 133
STRING (317) 134
CONST (318) 116
ENUM (319) 142 143
TIME (320) 135
WHEN (321) 224
SCRIPT (322) 216 217 218 219 220 221 222 223
RANGE (323)
STEP (324)
CASE (325) 196
DEFAULT (326) 197
IF (327) 204 205
ELSE (328) 205
SWITCH (329) 206 207
FOREACH (330) 208 209
IN (331) 208 209
CONTINUE (332) 210
BREAK (333) 211
RETURN (334) 212 213
SUPRESS_OP (335) 46
TYPEDEF (336) 157


Nonterminals, with rules where they appear

$accept (107)
    on left: 0
identifier (108)
    on left: 1, on right: 7 34 146 147 208 209
integer (109)
    on left: 2, on right: 4 5 6
version (110)
    on left: 3 4 5 6, on right: 159 160 226 227 228 229
based_identifier (111)
    on left: 7 8 9, on right: 11 181
context_identifier (112)
    on left: 10, on right: 12
primary_expr (113)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27,
    on right: 28
postfix_expr (114)
    on left: 28 29 30 31 32 33 34 35 36, on right: 29 30 31 32 33 34
    35 36 39
argument_expr_list (115)
    on left: 37 38, on right: 33 38
unary_expr (116)
    on left: 39 40, on right: 40 49 50 51 52 94 95
unary_operator (117)
    on left: 41 42 43 44 45 46 47 48, on right: 40
multiplicative_expr (118)
    on left: 49 50 51 52, on right: 50 51 52 53 54 55
additive_expr (119)
    on left: 53 54 55, on right: 54 55 56 57 58
shift_expr (120)
    on left: 56 57 58, on right: 57 58 59 60 61 62 63
relational_expr (121)
    on left: 59 60 61 62 63, on right: 60 61 62 63 64 65 66 67 68
equality_expr (122)
    on left: 64 65 66 67 68, on right: 65 66 67 68 69 70
and_expr (123)
    on left: 69 70, on right: 70 71 72
exclusive_or_expr (124)
    on left: 71 72, on right: 72 73 74
inclusive_or_expr (125)
    on left: 73 74, on right: 74 75 76
logical_and_expr (126)
    on left: 75 76, on right: 76 77 78
logical_or_expr (127)
    on left: 77 78, on right: 78 79 80
conditional_expr (128)
    on left: 79 80, on right: 80 91 93 111 184
type_context_name (129)
    on left: 81 82 83, on right: 83 84 150 151 152 153 154
type_context (130)
    on left: 84, on right: 9 23 26 85 86 122 149 175
object_constructor (131)
    on left: 85 86, on right: 21 89
array_constructor (132)
    on left: 87 88, on right: 22 90
constructor (133)
    on left: 89 90, on right: 92 95
object_expr (134)
    on left: 91 92, on right: 162 163 166 179 180 183
assignment_expr (135)
    on left: 93 94 95, on right: 37 38 94 109 110 208
assignment_operator (136)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108,
    on right: 94 95
expr (137)
    on left: 109 110, on right: 23 24 27 29 30 31 110 182 187 188 189
    203 204 205 206 207 213 216 218 220 224
constant_expr (138)
    on left: 111, on right: 147 173 178 196
visibility (139)
    on left: 112 113 114 115, on right: 161 162 163 164 165 166 167
storage (140)
    on left: 116 117, on right: 119
storage_list (141)
    on left: 118 119, on right: 119 161 162 163 164 165 166
typeid (142)
    on left: 120, on right: 142 155 156 157 158 159 160 222 223 226
    227 228 229
parentid (143)
    on left: 121 122, on right: 155 156 158
primitive_type (144)
    on left: 123 124 125 126 127 128 129 130 131 132 133 134 135,
    on right: 24 136 137 138 139 140 141
event_type (145)
    on left: 136 137 138 139 140 141, on right: 148
enum_specifier (146)
    on left: 142 143, on right: 164 165 166
enumerator_list (147)
    on left: 144 145, on right: 142 143 145
enumerator (148)
    on left: 146 147, on right: 144 145
type_specifier (149)
    on left: 148 149 150 151 152 153 154, on right: 161 162 163 170
decl_specifier (150)
    on left: 155 156 157 158 159 160, on right: 167
declaration (151)
    on left: 161 162 163 164 165 166 167, on right: 169
declaration_list (152)
    on left: 168 169, on right: 155 156 158 159 160 169 199 207 226
    227 228 229 230 231
type_declarator (153)
    on left: 170 171 172 173, on right: 157 171 172 173
declarator (154)
    on left: 174 175 176 177 178, on right: 161 162 163 165 166 176
    177 178
initializer_list (155)
    on left: 179 180, on right: 88 180
fid (156)
    on left: 181 182, on right: 182 183 184
finitializer (157)
    on left: 183 184, on right: 185 186
finitializer_list (158)
    on left: 185 186, on right: 86 186
range_expr (159)
    on left: 187 188 189, on right: 209
statement (160)
    on left: 190 191 192 193 194 195, on right: 196 197 200 201 204
    205
labeled_statement (161)
    on left: 196 197, on right: 190
compound_statement (162)
    on left: 198 199, on right: 191 208 209 222 223 224 225
statement_list (163)
    on left: 200 201, on right: 155 199 201 207 227 229 231
expression_statement (164)
    on left: 202 203, on right: 192
selection_statement (165)
    on left: 204 205 206 207, on right: 193
iteration_statement (166)
    on left: 208 209, on right: 194
jump_statement (167)
    on left: 210 211 212 213, on right: 195
script_list (168)
    on left: 214 215, on right: 155 156 215 226 227 228 229 230 231
script (169)
    on left: 216 217 218 219 220 221 222 223, on right: 215
script_body (170)
    on left: 224 225, on right: 216 217 218 219 220 221
library (171)
    on left: 226 227, on right: 232
application (172)
    on left: 228 229, on right: 233
toplevel (173)
    on left: 230 231, on right: 234
file (174)
    on left: 232 233 234, on right: 0


state 0

    0 $accept: . file $end

    LIBRARY      shift, and go to state 1
    APPLICATION  shift, and go to state 2

    $default  reduce using rule 168 (declaration_list)

    declaration_list  go to state 3
    library           go to state 4
    application       go to state 5
    toplevel          go to state 6
    file              go to state 7


state 1

  226 library: LIBRARY . typeid version '{' declaration_list script_list '}'
  227        | LIBRARY . typeid version '{' declaration_list script_list statement_list '}'

    M1TIDENTIFIER  shift, and go to state 8

    typeid  go to state 9


state 2

  228 application: APPLICATION . typeid version '{' declaration_list script_list '}'
  229            | APPLICATION . typeid version '{' declaration_list script_list statement_list '}'

    M1TIDENTIFIER  shift, and go to state 8

    typeid  go to state 10


state 3

  169 declaration_list: declaration_list . declaration ';'
  230 toplevel: declaration_list . script_list
  231         | declaration_list . script_list statement_list

    PUBLIC     shift, and go to state 11
    PRIVATE    shift, and go to state 12
    PROTECTED  shift, and go to state 13

    M1TIDENTIFIER  reduce using rule 112 (visibility)
    TYPE           reduce using rule 112 (visibility)
    INTERFACE      reduce using rule 112 (visibility)
    EVENT          reduce using rule 112 (visibility)
    INPUT          reduce using rule 112 (visibility)
    OUTPUT         reduce using rule 112 (visibility)
    PERSISTENT     reduce using rule 112 (visibility)
    CHAR           reduce using rule 112 (visibility)
    BYTE           reduce using rule 112 (visibility)
    INT            reduce using rule 112 (visibility)
    SIGNED         reduce using rule 112 (visibility)
    UNSIGNED       reduce using rule 112 (visibility)
    FLOAT          reduce using rule 112 (visibility)
    BOOL           reduce using rule 112 (visibility)
    STRING         reduce using rule 112 (visibility)
    CONST          reduce using rule 112 (visibility)
    ENUM           reduce using rule 112 (visibility)
    TIME           reduce using rule 112 (visibility)
    TYPEDEF        reduce using rule 112 (visibility)
    ':'            reduce using rule 112 (visibility)
    $default       reduce using rule 214 (script_list)

    visibility   go to state 14
    declaration  go to state 15
    script_list  go to state 16


state 4

  232 file: library .

    $default  reduce using rule 232 (file)


state 5

  233 file: application .

    $default  reduce using rule 233 (file)


state 6

  234 file: toplevel .

    $default  reduce using rule 234 (file)


state 7

    0 $accept: file . $end

    $end  shift, and go to state 17


state 8

  120 typeid: M1TIDENTIFIER .

    $default  reduce using rule 120 (typeid)


state 9

  226 library: LIBRARY typeid . version '{' declaration_list script_list '}'
  227        | LIBRARY typeid . version '{' declaration_list script_list statement_list '}'

    '('  shift, and go to state 18

    $default  reduce using rule 3 (version)

    version  go to state 19


state 10

  228 application: APPLICATION typeid . version '{' declaration_list script_list '}'
  229            | APPLICATION typeid . version '{' declaration_list script_list statement_list '}'

    '('  shift, and go to state 18

    $default  reduce using rule 3 (version)

    version  go to state 20


state 11

  113 visibility: PUBLIC .

    $default  reduce using rule 113 (visibility)


state 12

  114 visibility: PRIVATE .

    $default  reduce using rule 114 (visibility)


state 13

  115 visibility: PROTECTED .

    $default  reduce using rule 115 (visibility)


state 14

  161 declaration: visibility . storage_list type_specifier declarator
  162            | visibility . storage_list type_specifier declarator '=' object_expr
  163            | visibility . storage_list type_specifier declarator CONNECT_OP object_expr
  164            | visibility . storage_list enum_specifier
  165            | visibility . storage_list enum_specifier declarator
  166            | visibility . storage_list enum_specifier declarator '=' object_expr
  167            | visibility . decl_specifier

    TYPE       shift, and go to state 21
    INTERFACE  shift, and go to state 22
    TYPEDEF    shift, and go to state 23

    $default  reduce using rule 118 (storage_list)

    storage_list    go to state 24
    decl_specifier  go to state 25


state 15

  169 declaration_list: declaration_list declaration . ';'

    ';'  shift, and go to state 26


state 16

  215 script_list: script_list . script
  230 toplevel: declaration_list script_list .
  231         | declaration_list script_list . statement_list

    M1IDENTIFIER  shift, and go to state 27
    M1CHAR        shift, and go to state 28
    M1INTEGER     shift, and go to state 29
    M1FLOAT       shift, and go to state 30
    M1STRING      shift, and go to state 31
    INC_OP        shift, and go to state 32
    DEC_OP        shift, and go to state 33
    M1NIL         shift, and go to state 34
    M1THIS        shift, and go to state 35
    M1TRUE        shift, and go to state 36
    M1FALSE       shift, and go to state 37
    SCRIPT        shift, and go to state 38
    CASE          shift, and go to state 39
    DEFAULT       shift, and go to state 40
    IF            shift, and go to state 41
    SWITCH        shift, and go to state 42
    FOREACH       shift, and go to state 43
    CONTINUE      shift, and go to state 44
    BREAK         shift, and go to state 45
    RETURN        shift, and go to state 46
    SUPRESS_OP    shift, and go to state 47
    '('           shift, and go to state 48
    '@'           shift, and go to state 49
    '.'           shift, and go to state 50
    '&'           shift, and go to state 51
    '+'           shift, and go to state 52
    '-'           shift, and go to state 53
    '~'           shift, and go to state 54
    '!'           shift, and go to state 55
    '*'           shift, and go to state 56
    '{'           shift, and go to state 57
    ';'           shift, and go to state 58

    $default  reduce using rule 230 (toplevel)

    identifier            go to state 59
    based_identifier      go to state 60
    context_identifier    go to state 61
    primary_expr          go to state 62
    postfix_expr          go to state 63
    unary_expr            go to state 64
    unary_operator        go to state 65
    multiplicative_expr   go to state 66
    additive_expr         go to state 67
    shift_expr            go to state 68
    relational_expr       go to state 69
    equality_expr         go to state 70
    and_expr              go to state 71
    exclusive_or_expr     go to state 72
    inclusive_or_expr     go to state 73
    logical_and_expr      go to state 74
    logical_or_expr       go to state 75
    conditional_expr      go to state 76
    assignment_expr       go to state 77
    expr                  go to state 78
    statement             go to state 79
    labeled_statement     go to state 80
    compound_statement    go to state 81
    statement_list        go to state 82
    expression_statement  go to state 83
    selection_statement   go to state 84
    iteration_statement   go to state 85
    jump_statement        go to state 86
    script                go to state 87


state 17

    0 $accept: file $end .

    $default  accept


state 18

    4 version: '(' . integer ')'
    5        | '(' . integer ',' integer ')'
    6        | '(' . integer ',' integer ',' integer ')'

    M1INTEGER  shift, and go to state 88

    integer  go to state 89


state 19

  226 library: LIBRARY typeid version . '{' declaration_list script_list '}'
  227        | LIBRARY typeid version . '{' declaration_list script_list statement_list '}'

    '{'  shift, and go to state 90


state 20

  228 application: APPLICATION typeid version . '{' declaration_list script_list '}'
  229            | APPLICATION typeid version . '{' declaration_list script_list statement_list '}'

    '{'  shift, and go to state 91


state 21

  155 decl_specifier: TYPE . typeid parentid '{' declaration_list script_list statement_list '}'
  156               | TYPE . typeid parentid '{' declaration_list script_list '}'

    M1TIDENTIFIER  shift, and go to state 8

    typeid  go to state 92


state 22

  158 decl_specifier: INTERFACE . TYPE typeid parentid '{' declaration_list '}'
  159               | INTERFACE . LIBRARY typeid version '{' declaration_list '}'
  160               | INTERFACE . APPLICATION typeid version '{' declaration_list '}'

    TYPE         shift, and go to state 93
    LIBRARY      shift, and go to state 94
    APPLICATION  shift, and go to state 95


state 23

  157 decl_specifier: TYPEDEF . type_declarator typeid

    M1TIDENTIFIER  shift, and go to state 96
    EVENT          shift, and go to state 97
    INPUT          shift, and go to state 98
    OUTPUT         shift, and go to state 99
    CHAR           shift, and go to state 100
    BYTE           shift, and go to state 101
    INT            shift, and go to state 102
    SIGNED         shift, and go to state 103
    UNSIGNED       shift, and go to state 104
    FLOAT          shift, and go to state 105
    BOOL           shift, and go to state 106
    STRING         shift, and go to state 107
    TIME           shift, and go to state 108
    '('            shift, and go to state 109
    ':'            shift, and go to state 110

    type_context_name  go to state 111
    type_context       go to state 112
    primitive_type     go to state 113
    event_type         go to state 114
    type_specifier     go to state 115
    type_declarator    go to state 116


state 24

  119 storage_list: storage_list . storage
  161 declaration: visibility storage_list . type_specifier declarator
  162            | visibility storage_list . type_specifier declarator '=' object_expr
  163            | visibility storage_list . type_specifier declarator CONNECT_OP object_expr
  164            | visibility storage_list . enum_specifier
  165            | visibility storage_list . enum_specifier declarator
  166            | visibility storage_list . enum_specifier declarator '=' object_expr

    M1TIDENTIFIER  shift, and go to state 96
    EVENT          shift, and go to state 97
    INPUT          shift, and go to state 98
    OUTPUT         shift, and go to state 99
    PERSISTENT     shift, and go to state 117
    CHAR           shift, and go to state 100
    BYTE           shift, and go to state 101
    INT            shift, and go to state 102
    SIGNED         shift, and go to state 103
    UNSIGNED       shift, and go to state 104
    FLOAT          shift, and go to state 105
    BOOL           shift, and go to state 106
    STRING         shift, and go to state 107
    CONST          shift, and go to state 118
    ENUM           shift, and go to state 119
    TIME           shift, and go to state 108
    ':'            shift, and go to state 110

    type_context_name  go to state 111
    type_context       go to state 112
    storage            go to state 120
    primitive_type     go to state 113
    event_type         go to state 114
    enum_specifier     go to state 121
    type_specifier     go to state 122


state 25

  167 declaration: visibility decl_specifier .

    $default  reduce using rule 167 (declaration)


state 26

  169 declaration_list: declaration_list declaration ';' .

    $default  reduce using rule 169 (declaration_list)


state 27

    1 identifier: M1IDENTIFIER .

    $default  reduce using rule 1 (identifier)


state 28

   13 primary_expr: M1CHAR .

    $default  reduce using rule 13 (primary_expr)


state 29

   14 primary_expr: M1INTEGER .

    $default  reduce using rule 14 (primary_expr)


state 30

   15 primary_expr: M1FLOAT .

    $default  reduce using rule 15 (primary_expr)


state 31

   18 primary_expr: M1STRING .

    $default  reduce using rule 18 (primary_expr)


state 32

   47 unary_operator: INC_OP .

    $default  reduce using rule 47 (unary_operator)


state 33

   48 unary_operator: DEC_OP .

    $default  reduce using rule 48 (unary_operator)


state 34

   19 primary_expr: M1NIL .

    $default  reduce using rule 19 (primary_expr)


state 35

   20 primary_expr: M1THIS .

    $default  reduce using rule 20 (primary_expr)


state 36

   16 primary_expr: M1TRUE .

    $default  reduce using rule 16 (primary_expr)


state 37

   17 primary_expr: M1FALSE .

    $default  reduce using rule 17 (primary_expr)


state 38

  220 script: SCRIPT . expr script_body
  221       | SCRIPT . script_body
  222       | SCRIPT . typeid compound_statement
  223       | SCRIPT . '~' typeid compound_statement

    M1IDENTIFIER   shift, and go to state 27
    M1CHAR         shift, and go to state 28
    M1INTEGER      shift, and go to state 29
    M1FLOAT        shift, and go to state 30
    M1STRING       shift, and go to state 31
    INC_OP         shift, and go to state 32
    DEC_OP         shift, and go to state 33
    M1TIDENTIFIER  shift, and go to state 8
    M1NIL          shift, and go to state 34
    M1THIS         shift, and go to state 35
    M1TRUE         shift, and go to state 36
    M1FALSE        shift, and go to state 37
    WHEN           shift, and go to state 123
    SUPRESS_OP     shift, and go to state 47
    '('            shift, and go to state 48
    '@'            shift, and go to state 49
    '.'            shift, and go to state 50
    '&'            shift, and go to state 51
    '+'            shift, and go to state 124
    '-'            shift, and go to state 125
    '~'            shift, and go to state 126
    '!'            shift, and go to state 55
    '*'            shift, and go to state 56
    '{'            shift, and go to state 57

    identifier           go to state 59
    based_identifier     go to state 60
    context_identifier   go to state 61
    primary_expr         go to state 62
    postfix_expr         go to state 63
    unary_expr           go to state 64
    unary_operator       go to state 65
    multiplicative_expr  go to state 66
    additive_expr        go to state 67
    shift_expr           go to state 68
    relational_expr      go to state 69
    equality_expr        go to state 70
    and_expr             go to state 71
    exclusive_or_expr    go to state 72
    inclusive_or_expr    go to state 73
    logical_and_expr     go to state 74
    logical_or_expr      go to state 75
    conditional_expr     go to state 76
    assignment_expr      go to state 77
    expr                 go to state 127
    typeid               go to state 128
    compound_statement   go to state 129
    script_body          go to state 130


state 39

  196 labeled_statement: CASE . constant_expr ':' statement

    M1IDENTIFIER  shift, and go to state 27
    M1CHAR        shift, and go to state 28
    M1INTEGER     shift, and go to state 29
    M1FLOAT       shift, and go to state 30
    M1STRING      shift, and go to state 31
    INC_OP        shift, and go to state 32
    DEC_OP        shift, and go to state 33
    M1NIL         shift, and go to state 34
    M1THIS        shift, and go to state 35
    M1TRUE        shift, and go to state 36
    M1FALSE       shift, and go to state 37
    SUPRESS_OP    shift, and go to state 47
    '('           shift, and go to state 48
    '@'           shift, and go to state 49
    '.'           shift, and go to state 50
    '&'           shift, and go to state 51
    '+'           shift, and go to state 124
    '-'           shift, and go to state 125
    '~'           shift, and go to state 54
    '!'           shift, and go to state 55
    '*'           shift, and go to state 56

    identifier           go to state 59
    based_identifier     go to state 60
    context_identifier   go to state 61
    primary_expr         go to state 62
    postfix_expr         go to state 63
    unary_expr           go to state 131
    unary_operator       go to state 65
    multiplicative_expr  go to state 66
    additive_expr        go to state 67
    shift_expr           go to state 68
    relational_expr      go to state 69
    equality_expr        go to state 70
    and_expr             go to state 71
    exclusive_or_expr    go to state 72
    inclusive_or_expr    go to state 73
    logical_and_expr     go to state 74
    logical_or_expr      go to state 75
    conditional_expr     go to state 132
    constant_expr        go to state 133


state 40

  197 labeled_statement: DEFAULT . ':' statement

    ':'  shift, and go to state 134


state 41

  204 selection_statement: IF . '(' expr ')' statement
  205                    | IF . '(' expr ')' statement ELSE statement

    '('  shift, and go to state 135


state 42

  206 selection_statement: SWITCH . '(' expr ')' '{' '}'
  207                    | SWITCH . '(' expr ')' '{' declaration_list statement_list '}'

    '('  shift, and go to state 136


state 43

  208 iteration_statement: FOREACH . identifier IN assignment_expr compound_statement
  209                    | FOREACH . identifier IN range_expr compound_statement

    M1IDENTIFIER  shift, and go to state 27

    identifier  go to state 137


state 44

  210 jump_statement: CONTINUE . ';'

    ';'  shift, and go to state 138


state 45

  211 jump_statement: BREAK . ';'

    ';'  shift, and go to state 139


state 46

  212 jump_statement: RETURN . ';'
  213               | RETURN . expr ';'
